Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49771

Backspace key is not working when CapsLock is on

XMLWordPrintable

    • 25a7034d78aeb12726a1052d64c0aa3314a1f69d 98a4861d5de8caeac6afbb8d4a50943b0bb71761 (qt/qtbase/6.0) f83ededa19ec1ce059c5c96d94c4a29ae7d1273e (qt/tqtc-qtbase/5.15) e6d4a052a6c6b99a326e8b786c7efb491fb9f7e0 (qt/qtbase/6.1)

      When I enable CapsLock mode, the Backspace key is no longer working (does nothing on a QTextEdit).

      If I catch the keyPressEvent, I see that Qt::GroupSwitchModifier is added to key.modifiers(). When I XOR it away and call the original event handler, everything works again.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            liaqi Liang Qi
            mandriver Dmitry Shachnev
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated: